--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-beautifulsoup4==4.11.1
-Faker==14.2.1
-Flask==1.1.2
-Flask_Bcrypt==1.0.1
-Flask_DebugToolbar==0.13.1
-Flask_SQLAlchemy==2.5.1
-Flask_WTF==1.0.1
-requests==2.26.0
-SQLAlchemy==1.4.22
-WTForms==3.0.1
+beautifulsoup4
+Faker
+Flask
+flask_admin
+Flask_Bcrypt
+Flask_DebugToolbar
+Flask_SQLAlchemy
+Flask_WTF
+psycopg2
+gunicorn
+requests
+SQLAlchemy==1.3
+WTForms
